deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
        - name: minio
          persistentVolumeClaim:
            claimName: minio
      containers:
      - name: minio
        image: quay.io/minio/minio
        command: ["minio"]
        args: ["server", "/data", "--console-address", ":9001"]
        ports:
          - containerPort: 9000
          - containerPort: 9001
        volumeMounts:
        - mountPath: "/data"
          name: minio
