service.yml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
spec:
  type: NodePort
  selector:
    app: minio
  ports:
  - name: minio
    protocol: TCP
    port: 9000
    targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  namespace: minio
spec:
  type: NodePort
  selector:
    app: minio
  ports:
  - name: minio-console
    protocol: TCP
    port: 9001
    targetPort: 9001
